Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14778

WARNING: CPU: 54 PID: 25514 at ll_ra_count_get.isra.32+0x188/0x1a0 [lustre]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      CPU: 54 PID: 25514 Comm: python3 Tainted: G OE --------- -t - 4.18.0-193.28.1.el8_2.x86_64 #1
      Hardware name: HPE ProLiant XL925g Gen10 Plus/ProLiant XL925g Gen10 Plus, BIOS A45 11/06/2020
      RIP: 0010:ll_ra_count_get.isra.32+0x188/0x1a0 [lustre]
      Call Trace:
      ll_readahead.constprop.36+0x6b5/0xb30 [lustre]
      ll_io_read_page+0x352/0x810 [lustre]
      ll_readpage+0xf3/0x810 [lustre]
      generic_file_buffered_read+0x61a/0xb10
      vvp_io_read_start+0x4cc/0x650 [lustre]
      cl_io_start+0x59/0x110 [obdclass]
      cl_io_loop+0x9a/0x1e0 [obdclass]
      ll_file_io_generic+0x5da/0xbc0 [lustre]
      ll_file_read_iter+0x1fb/0x280 [lustre]
      new_sync_read+0x121/0x170
      vfs_read+0x91/0x140
      ksys_read+0x4f/0xb0
      

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: